<resources>
    <string name="app_name">InstaClone</string>
    <string name="facebook">FACEBOOK</string>
    <string name="from">from</string>
    <string name="sign_up">Sign up.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
