<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ComposeFragment">


    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:layout_marginTop="70dp"
        />

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_below="@id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_below="@+id/btnCaptureImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_below="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:background="@drawable/shape_rect_app_bar"
        />

</LinearLayout>